compiler/tests/en/errors/toplevel_if_not_constant.salam
// EXPECT: compile-time constant
func flag() : bool: ret true end

if flag():
    const X = 1
end

func main:
end
